--- a/styles.css
+++ b/styles.css
@@ -175,12 +175,61 @@ span{
   margin: 2em 0 3em;
   font-style: italic;
 }
+.Projects{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12% 8%;
+  gap: 10em;
+  background: black;
+}
+.Projects-content h2{
+  text-align: left;
+  color: rgb(59, 204, 161);
+  font-size: 42px;
+  font-style: italic;
+  text-align: center;
+}
+.Projects-content p{
+  color: white;
+  font-size: 20px;
+  margin: 2em 0 3em;
+  font-style: italic;
+  text-align: center;
+}
+.Experience{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 12% 8%;
+  gap: 10em;
+  background: white;
+}
+.Experience-content h2{
+  text-align: left;
+  color: black;
+  font-size: 42px;
+  font-style: italic;
+  text-align: center;
+}
+.Experience-content p{
+  color: black;
+  font-size: 20px;
+  margin: 2em 0 3em;
+  font-style: italic;
+  text-align: center;
+}
+.contact-form{
+  background-color: black;
+
+}
 .contact-form h2{
   text-align: center;
   margin-top: 3em;
   margin-bottom: 1em;
   font-size: 36px;
   font-style: italic;
+color: #fff;
 }
 .contact-form form{
   max-width: 50em;
@@ -193,8 +242,8 @@ span{
   width: 100%;
   padding: 1.5em;
   font-size: 18px;
-  color: white;
-  background: black;
+  color: black;
+  background: white;
   border-radius: .8rem;
   margin: 1rem 0;
   resize: none;
